Added meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!--/ maintained by https://neuenet.com /-->
 
+    <meta name="description" content="This is a special-use domain name for the purpose of education about the Handshake protocol and usage of Handshake domains. Feel free to use this domain in educational literature."/>
     <meta name="theme-color" content="#f06595"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
