--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>examplename/ &middot; a reference Handshake domain</title>
 
-    <!--/ maintained by https://neuenet.com /-->
+    <!--/ maintained by https://registry.neuenet / https://neuenet.com /-->
 
     <meta name="description" content="This is a special-use domain name for the purpose of education about the Handshake protocol and usage of Handshake domains. Feel free to use this domain in educational literature."/>
     <meta name="theme-color" content="#f06595"/>
