format local resource links in a way that Sia likes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="theme-color" content="#f06595"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
-    <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml"/>
-    <link rel="mask-icon" href="/assets/favicon.svg" color="#f06595"/>
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml"/>
+    <link rel="mask-icon" href="assets/favicon.svg" color="#f06595"/>
 
-    <link rel="stylesheet" href="/assets/uchu-grid.css"/>
-    <link rel="stylesheet" href="/assets/global.css"/>
+    <link rel="stylesheet" href="assets/uchu-grid.css"/>
+    <link rel="stylesheet" href="assets/global.css"/>
 
     <style>
       /* fonts ********************************************/
@@ -23,42 +23,42 @@
         font-family: "neuenet-mono";
         font-style: normal;
         font-weight: 400;
-        src: url("/assets/fonts/mono/400.woff2") format("woff2");
+        src: url("assets/fonts/mono/400.woff2") format("woff2");
       }
 
       @font-face {
         font-family: "neuenet-mono";
         font-style: normal;
         font-weight: 600;
-        src: url("/assets/fonts/mono/600.woff2") format("woff2");
+        src: url("assets/fonts/mono/600.woff2") format("woff2");
       }
 
       @font-face {
         font-family: "neuenet-sans";
         font-style: normal;
         font-weight: 400;
-        src: url("/assets/fonts/sans/400.woff2") format("woff2");
+        src: url("assets/fonts/sans/400.woff2") format("woff2");
       }
 
       @font-face {
         font-family: "neuenet-sans";
         font-style: italic;
         font-weight: 400;
-        src: url("/assets/fonts/sans/400i.woff2") format("woff2");
+        src: url("assets/fonts/sans/400i.woff2") format("woff2");
       }
 
       @font-face {
         font-family: "neuenet-sans";
         font-style: normal;
         font-weight: 600;
-        src: url("/assets/fonts/sans/600.woff2") format("woff2");
+        src: url("assets/fonts/sans/600.woff2") format("woff2");
       }
 
       @font-face {
         font-family: "neuenet-sans";
         font-style: italic;
         font-weight: 600;
-        src: url("/assets/fonts/sans/600i.woff2") format("woff2");
+        src: url("assets/fonts/sans/600i.woff2") format("woff2");
       }
 
       /* :root ********************************************/
