og update - adds an og:image - adds more og fields

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="theme-color" content="#f06595"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
+    <meta property="og:description" content="This is a special-use domain name for the purpose of education about the Handshake protocol and usage of Handshake domains. Feel free to use this domain in educational literature.">
+    <meta property="og:image" content="assets/og.png">
+    <meta property="og:title" content="examplename/">
+
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml"/>
     <link rel="mask-icon" href="assets/favicon.svg" color="#f06595"/>
 
